syntax = "proto3";

service Authentication {
    rpc RegisterNewUser(RegisterRequest) returns (AuthenticationResponse) {}
    rpc Login(LoginRequest) returns (AuthenticationResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}
message AuthenticationResponse {
    StatusResponse status = 1;
    string token = 2;
}
enum StatusResponse {
    OK = 0;
    SERVER_ERROR = 1;
    FAILURE = 2;
    USER_EXIST = 3;
    EMAIL_EXIST = 4;
}